# wandering_inn_scraper

./: .gitignore  Cargo.toml  LICENSE  README.md  example_config.json  example_config.jsonc  new_architecture.md  new_config.jsonc  new_requirements.md
.github/workflows/: build.yml
db/: style.css
src/: config.rs  db.rs  epub.rs  index.rs  mail.rs  main.rs  scraper.rs
wix/: License.rtf  main.wxs
