[package]
name = "wandering_inn_scraper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
log = "0.4.19"
mail-builder = "0.3.0"
mail-send = "0.4.0"
regex = "1.9.3"
rusqlite = "0.29.0"
serde = "1.0.180"
serde_json = "1.0.104"
simple_logger = "4.2.0"
soup = "0.5.1"
tokio = { version = "1.29.1", features = ["full"] }
