[package]
name = "wandering_inn_scraper"
version = "1.2.0"
edition = "2018"
description = "A scraper for the web serial The Wandering Inn"
authors = ["Frederic Sauve-Hoover"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.bundle]
identifier = "rsauvehoover/wandering-inn-scraper"
resources = ["src/assets", "src/font"]
linux_use_terminal = true

[profile.release]
opt-level = 2

[dependencies]
color-name = "1.1.0"
epub-builder = "0.7.1"
hex = "0.4.3"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
image = "0.24.7"
imageproc = "0.23.0"
mail-builder = "0.3.0"
mail-send = "0.4.0"
regex = "1.9.3"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusttype = "0.9.3"
serde = "1.0.180"
serde_json = "1.0.104"
soup = "0.5.1"
tokio = { version = "1.29.1", features = ["full"] }
